<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/mm">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="corp.s.a.i.obesitydestroyers.bmicalc"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dp"
        android:textStyle="normal"
        android:gravity="center"
        android:text="@string/g2"
        android:textColor="@color/abc_primary_text_material_dark"
        android:id="@+id/tv3"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/g3"
        android:textSize="25dp"
        android:layout_marginLeft="10dp"

        android:gravity="start"
        android:id="@+id/textView4"
        android:layout_below="@+id/tv3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp" />

    <EditText
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/abc_primary_text_material_dark"
        android:inputType="phone"
        android:textColor="@color/abc_primary_text_material_dark"
        android:hint="@string/g5"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />


    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_height="wrap_content"        android:text="@string/g4"
        android:textSize="25dp"

        android:gravity="start"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginTop="69dp"
        android:textColorHighlight="#ff000000" />
        <EditText
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/abc_primary_text_material_dark"
            android:inputType="phone"
            android:textColor="@color/abc_primary_text_material_dark"
            android:hint="Inches"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_below="@+id/textView4"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignEnd="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="20dp"
        android:textStyle="bold"
        android:inputType="phone"
        android:hint="@string/g6"
        android:textColorHint="@color/abc_primary_text_material_dark"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/tv3"
        android:layout_alignEnd="@+id/tv3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g7"
        android:background="@drawable/button"
        android:layout_marginTop="170dp"
        android:textSize="23dp"
        android:textStyle="bold"
        android:id="@+id/button2"
        android:textAllCaps="true"

        android:onClick="display"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/abc_primary_text_material_dark"
            android:text="@string/g10"
            android:gravity="center"

            android:textSize="25dp"
            android:layout_marginTop="34dp"
            android:id="@+id/textView7"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:textColorHighlight="@color/abc_primary_text_material_light" />

        <EditText
            android:layout_width="wrap_content"
android:textColor="@color/abc_primary_text_material_dark"            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="@color/abc_primary_text_material_dark"
            android:hint="Name"
            android:gravity="center"
            android:layout_marginTop="42dp"
            android:textStyle="bold"
            android:ems="10"
            android:id="@+id/name"
            android:layout_below="@+id/textView7"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignRight="@+id/textView5"
            android:singleLine="false"
            android:selectAllOnFocus="false"
            android:textColorHighlight="#ff000000" />
    </RelativeLayout>
</ScrollView>